# captcha

./: .dockerignore  .eslintignore  .eslintrc.cjs  .eslintrc.config.js  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .npmignore  .npmrc  .prettierignore  .prettierrc.js  .yamllint  CHANGELOG.md  CNAME  Captcha-B44rnE3u.js  Captcha-BEbAssXG.js  Captcha-BLOpr1kW.js  Captcha-CFSKsxm3.js  Captcha-Cntoo_-l.js  Captcha-CpThaJWR.js  Captcha-DmelpUdl.js  Captcha-DvgQHjMB.js  Dockerfile  ProcaptchaWidget--cFaHFYN.js  ProcaptchaWidget-B0-8AZyO.js  ProcaptchaWidget-B5EVt0H1.js  ProcaptchaWidget-B8Ik-DYb.js  ProcaptchaWidget-B9BG-olo.js  ProcaptchaWidget-BBRZv9SZ.js  ProcaptchaWidget-BJBQxbCd.js  ProcaptchaWidget-BKxqtCe_.js  ProcaptchaWidget-BL5qH9Pq.js  ProcaptchaWidget-BLl9yY-7.js  ProcaptchaWidget-BOvpgfH_.js  ProcaptchaWidget-BZq2OhjK.js  ProcaptchaWidget-BfqnMHY0.js  ProcaptchaWidget-BgZ8TZrf.js  ProcaptchaWidget-BiGPFKFi.js  (+173 more)
.changeset/: access-rule-harshest-wins.md  access-rule-split-query-cache.md  access-rules-portable-types.md  account-crypto-worker-tests.md  account-worker-js-suffix.md  add-procaptcha-ready-event.md  admin-endpoints-in-maintenance-mode.md  admin-endpoints-request-logger.md  all-facts-rest.md  allow-google-translate-domains.md  angry-boxes-return.md  angular-version-alignment.md  asn-access-rules.md  asn-rule-lookup-perf.md  auto-ban-score-threshold-db-schema.md  auto-ban-score-threshold.md  autoban-after-access-policy.md  beige-snails-scream.md  better-apples-watch.md  better-guests-admire.md  better-hounds-wish.md  better-maps-sin.md  better-symbols-admire.md  big-animals-jump.md  big-ghosts-glow.md  big-llamas-fail.md  big-pianos-kick.md  bit-level-pow-difficulty.md  bitter-crews-show.md  bitter-ties-hang.md  block-only-rule-lookup.md  blocked-session-logging.md  blue-pigs-raise.md  brave-ads-speak.md  breezy-ads-cry.md  breezy-adults-wash.md  bright-rockets-leave.md  brown-pens-shout.md  brown-rocks-fetch.md  bump-ipinfo.md  (+569 more)
.github/: CODEOWNERS  branches.md  dependabot.yml  release-drafter.yml
.husky/: check-branch.sh  pre-commit  pre-commit.ts
demos/: docker-compose.yml
demos/dapp-example/contracts/: Cargo.toml  lib.rs
demos/demo-nft-marketplace/contract/: Cargo.toml  lib.rs  nfts.rs
demos/demo-nft-marketplace/contracts/: Cargo.toml  lib.rs  nfts.rs
dev/: README.md  REPO_VISUALISATION.md  env.development  env.rococo  env.test  package.json  tsconfig.json  vite.config.ts
docker/: README.md  ci.dockerfile  client-example-server.Caddyfile  contract.debug-deploy.dockerfile  daemon.json  dns-tenants.json  docker-compose.client-example-server.yml  docker-compose.contract.deploy.yml  docker-compose.demo.yml  docker-compose.development.yml  docker-compose.flux-provider.yml  docker-compose.js_server.yml  docker-compose.mongo.yml  env.development  (+23 more)
protocol/: Cargo.toml  README.md  cli  package.json  tsconfig.json
protocol/contracts/captcha/: Cargo.toml
protocol/contracts/captcha/src/: lib.rs
protocol/contracts/common/: Cargo.toml  README.md
protocol/contracts/common/src/: account.rs  account_utils.rs  config.rs  contract.rs  contract_utils.rs  errors.rs  lib.rs  math.rs  test_helper.rs  test_utils.rs  utils.rs
protocol/contracts/common_dev/: Cargo.toml  README.md
protocol/contracts/common_dev/src/: lib.rs
protocol/contracts/proxy/: Cargo.toml  expanded.rs
protocol/contracts/proxy/src/: lib.rs
protocol/contracts/tmp/: Cargo.toml  lib.rs  rpc.md
protocol/crates/disable_macro/: Cargo.toml
protocol/crates/disable_macro/src/: lib.rs
protocol/crates/inject_self_macro/: Cargo.toml
protocol/crates/inject_self_macro/src/: lib.rs
protocol/crates/named_functions_macro/: Cargo.toml
protocol/crates/named_functions_macro/src/: lib.rs
protocol/dev/: .env  README.md  env.development  env.template  env.test  package-lock.json  package.json  tsconfig.json
protocol/dev/src/: cli.ts
protocol/protocol/: .env  .gitignore  CONTRACT  README.md  docker-compose.yml  package.json
protocol/protocol/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
protocol/protocol/.github/workflows/: pr_dev_to_main_only.yml  rust.yml  rust_env.yml
protocol/protocol/contracts/: Cargo.toml  expanded.txt  lib.rs  log.txt
protocol/protocol/contracts/captcha/: Cargo.toml
protocol/protocol/contracts/captcha/src/: lib.rs
protocol/protocol/contracts/common/: Cargo.toml
protocol/protocol/contracts/common/src/: lib.rs
protocol/protocol/contracts/common_dev/: Cargo.toml
protocol/protocol/contracts/common_dev/src/: lib.rs
protocol/protocol/contracts/crates/storage/derive/: Cargo.toml
protocol/protocol/contracts/crates/storage/derive/src/: lib.rs
protocol/protocol/contracts/crates/storage/derive/src/tests/: mod.rs
protocol/protocol/contracts/disable_macro/: Cargo.toml
protocol/protocol/contracts/disable_macro/src/: lib.rs
protocol/protocol/contracts/inject_self_macro/src/: lib.rs
protocol/protocol/contracts/named_functions_macro/src/: lib.rs
protocol/protocol/contracts/proxy/: Cargo.toml
protocol/protocol/contracts/proxy/src/: lib.rs
protocol/protocol/crates/disable_macro/src/: lib.rs
protocol/protocol/crates/inject_self_macro/: Cargo.toml
protocol/protocol/crates/named_functions_macro/: Cargo.toml
protocol/protocol/crates/named_functions_macro/src/: lib.rs
protocol/protocol/crates/storage/derive/: Cargo.toml
protocol/protocol/crates/storage/derive/src/: enum_spread_allocate.rs
protocol/protocol/crates/storage/derive/src/tests/: enum_spread_allocate.rs
protocol/protocol/crates/storage_derive/: Cargo.toml
protocol/protocol/dev/: README.md  package-lock.json  package.json
protocol/protocol/dev/src/: cli.ts
protocol/protocol/docker/: Dockerfile  Substrate.dockerfile  contracts.dapp.dockerfile  contracts.deploy.contract.sh  contracts.deploy.protocol.sh  contracts.protocol.dockerfile
protocol/protocol/scripts/: deploy.ts  generateMnemonic.ts  setup.ts  types.ts
protocol/protocol/src/captcha/: Cargo.toml
protocol/protocol/src/proxy/: Cargo.toml  lib.rs
protocol/protocol/tests/: prosopo.test.ts
(+3840 files in other folders)
