[package]
name = "dapp"
version = "3.0.1"
authors = ["Chris Taylor chris@prosopo.io"]
edition = "2021"

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", version = "3.0.1", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", version = "3.0.1", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", version = "3.0.1", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", version = "3.0.1", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", version = "3.0.1", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", version = "3.0.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
prosopo = { git = "https://github.com/prosopo-io/protocol", branch = "master", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "dapp"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib"
]
# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "prosopo/std"
]
ink-as-dependency = []
