[package]
name = "demo_nft_contract"
version = "0.1.0"
authors = ["Sinisa Canak sinisa.canak997@gmail.com"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.2.0", default-features = false }
ink_metadata = { version = "3.2.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.2.0", default-features = false }
ink_storage = { version = "3.2.0", default-features = false }
ink_lang = { version = "3.2.0", default-features = false }
ink_prelude = { version = "3.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }

prosopo = { git = "https://github.com/prosopo-io/protocol", branch = "ink-3.2.0", default-features = false, features = ["ink-as-dependency"] }

base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-json-core = { version = "0.4.0", default-features = false, features = ["heapless"] }

[lib]
name = "demo_nft_contract"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "brush/std",
    "prosopo/std",
    "serde-json-core/std"
]
ink-as-dependency = []