[package]
name = "demo_nft_contract"
version = "0.2.0"
authors = ["Sinisa Canak sinisa.canak997@gmail.com"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", rev="4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { rev="14ff655a0d83440f40c57c82d9a33e4c5b981da7", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }
prosopo = { git = "https://github.com/prosopo/protocol", branch = "inkv4", default-features = false, features = ["ink-as-dependency"] }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-json-core = { version = "0.4.0", default-features = false, features = ["heapless"] }

[lib]
name = "demo_nft_contract"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "prosopo/std",
    "serde-json-core/std"
]
ink-as-dependency = []
