[package]
name = "captcha"
version = "4.0.0"
authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io", "Vincenzo Ferrara", "Siniša Čanak"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/prosopo/ink_sr25519", branch="goastler-add-sr25519_verify", default-features = false }
scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }

[dependencies.inject_self_macro]
version = "0.3.0"
path = "../../crates/inject_self_macro"

[dependencies.named_functions_macro]
version = "0.3.0"
path = "../../crates/named_functions_macro"

[dependencies.disable_macro]
version = "0.3.0"
path = "../../crates/disable_macro"

[dependencies.common]
version = "0.3.0"
path = "../../contracts/common"
default-features = false
features = ["ink-as-dependency"] 

[dev-dependencies.common_dev]
version = "0.3.0"
path = "../../contracts/common_dev"
default-features = false
features = ["ink-as-dependency"] 

[lib]
name = "captcha"
path = "src/lib.rs"
#crate-type = [
    # Used for normal contract Wasm blobs.
#    "cdylib",
#    "rlib"
#]

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
