[package]
name = "captcha"
version = "1.0.2"
authors = [
  "Chris Taylor <chris@prosopo.io>",
  "George Oastler <george@prosopo.io>",
  "Vincenzo Ferrara",
  "Siniša Čanak"
]
edition = "2021"

[dependencies.ink]
version = "5.0.0"
default-features = false

[dependencies.scale]
package = "parity-scale-codec"
version = "3.4"
default-features = false
features = [ "derive" ]

[dependencies.scale-info]
version = "2.7.0"
default-features = false
features = [ "derive" ]
optional = true

[dependencies.disable_macro]
path = "../../crates/disable_macro"

[dependencies.common]
path = "../../contracts/common"
default-features = false
features = [ "ink-as-dependency" ]

[dev-dependencies.common]
path = "../../contracts/common"
default-features = false
features = [ "test-dependency" ]

[lib]
path = "src/lib.rs"

[features]
default = [ "std" ]
std = [ "ink/std", "scale/std", "scale-info/std" ]
ink-as-dependency = [ ]
