[package]
name = "common"
version = "1.0.2"
authors = [
  "Chris Taylor <chris@prosopo.io>",
  "George Oastler <george@prosopo.io>",
  "Vincenzo Ferrara",
  "Siniša Čanak"
]
edition = "2021"

[dependencies.ink]
version = "5.0.0"
default-features = false

[dependencies.scale]
package = "parity-scale-codec"
version = "3.4"
default-features = false
features = [ "derive" ]

[dependencies.scale-info]
version = "2.7.0"
default-features = false
features = [ "derive" ]
optional = true

[lib]
path = "src/lib.rs"

[profile.release]
overflow-checks = false

[features]
default = [ "std" ]
std = [ "ink/std", "scale/std", "scale-info/std" ]
ink-as-dependency = [ "scale-info/derive" ]
test-dependency = [ ]

