[package]
name = "proxy"
version = "0.2.2"
authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/prosopo/ink_sr25519", branch="goastler-add-sr25519_verify", default-features = false }
scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }

[dependencies.inject_self_macro]
version = "0.2.2"
path = "../../crates/inject_self_macro"

[dependencies.named_functions_macro]
version = "0.2.2"
path = "../../crates/named_functions_macro"

[dependencies.disable_macro]
version = "0.2.2"
path = "../../crates/disable_macro"

[dependencies.common]
version = "0.2.2"
path = "../../contracts/common"
default-features = false
features = ["ink-as-dependency"]

[dev-dependencies.common]
version = "0.2.2"
path = "../../contracts/common"
default-features = false
features = ["test-dependency"]

[lib]
path = "src/lib.rs"

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
