[package]
name = "proxy"
version = "0.3.37"
authors = [
  "Chris Taylor <chris@prosopo.io>",
  "George Oastler <george@prosopo.io>"
]
edition = "2021"

[dependencies.ink]
git = "https://github.com/prosopo/ink_sr25519"
branch = "4.3.0-custom"
default-features = false

[dependencies.scale]
package = "parity-scale-codec"
version = "3.4"
default-features = false
features = [ "derive" ]

[dependencies.scale-info]
version = "2.7.0"
default-features = false
features = [ "derive" ]
optional = true

[dependencies.disable_macro]
path = "../../crates/disable_macro"

[dependencies.common]
path = "../../contracts/common"
default-features = false
features = [ "ink-as-dependency" ]

[dev-dependencies.common]
path = "../../contracts/common"
default-features = false
features = [ "test-dependency" ]

[lib]
path = "src/lib.rs"

[profile.release]
overflow-checks = false

[features]
default = [ "std" ]
std = [ "ink/std", "scale/std", "scale-info/std" ]
ink-as-dependency = [ ]

