[package]
name = "prosopo"
version = "3.0.0-rc6"
authors = ["Chris Taylor chris@prosopo.io"]
edition = "2021"

[dependencies]
ink_primitives = { git = "https://github.com/prosopo-io/ink", branch = "spread_allocate_enum_default", default-features = false }
ink_metadata = { git =  "https://github.com/prosopo-io/ink", branch = "spread_allocate_enum_default", default-features = false, features = ["derive"], optional = true }
ink_env = { git =  "https://github.com/prosopo-io/ink", branch = "spread_allocate_enum_default", default-features = false }
ink_storage = { git =  "https://github.com/prosopo-io/ink", branch = "spread_allocate_enum_default", default-features = false }
ink_lang = { git =  "https://github.com/prosopo-io/ink", branch = "spread_allocate_enum_default", default-features = false }
ink_prelude = { git =  "https://github.com/prosopo-io/ink", branch = "spread_allocate_enum_default", default-features = false }
scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
[lib]
name = "prosopo"
path =  "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]
# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
ink-experimental-engine = ["ink_env/ink-experimental-engine"]
