[package]
name = "prosopo"
version = "3.0.0-rc7"
authors = ["Chris Taylor chris@prosopo.io"]
edition = "2021"
resolver = "2"

[dependencies]
ink_primitives = { git = "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
ink_metadata = { git = "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
ink_storage = { git = "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
ink_lang = { git = "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
ink_prelude = { git = "https://github.com/prosopo-io/ink", branch = "update-to-rc8", default-features = false }
scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
rand_chacha = { version = "0.3.1", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
[lib]
name = "prosopo"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib"
]
# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
ink-experimental-engine = ["ink_env/ink-experimental-engine"]
