[package]
name = "prosopo"
version = "3.3.0"
authors = ["Chris Taylor chris@prosopo.io"]
edition = "2021"

[dependencies]
ink_primitives = {  version = "3.3.0", default-features = false }
ink_metadata = {  version = "3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = {  version = "3.3.0", default-features = false }
ink_storage = {  version = "3.3.0", default-features = false }
ink_lang = {  version = "3.3.0", default-features = false }
ink_prelude = {  version = "3.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
rand_chacha = { version = "0.3.1", default-features = false }

# custom prosopo storage
prosopo_storage_derive = { version = "3.3.0", path = "crates/storage/derive", default-features = false }

[lib]
name = "prosopo"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib"
]
# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
