[package]
name = "captcha"
version = "4.0.0"
authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io", "Vincenzo Ferrara", "Siniša Čanak"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/prosopo/ink", rev="9ca19c462d5f5d1572ddce595d2698207241fd4a", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
hex = "0.4.3"

# custom storage for enums
storage_derive = { version = "3.3.0", path = "../storage_derive", default-features = false }

[dependencies.inject_self_macro]
version = "0.3.0"
path = "../inject_self_macro"

[dependencies.named_functions_macro]
version = "0.3.0"
path = "../named_functions_macro"

[dependencies.disable_macro]
version = "0.3.0"
path = "../disable_macro"

[lib]
name = "captcha"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]
# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
