[package]
name = "proxy"
version = "4.0.0"
authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/prosopo/ink", rev="bec5105fb79926377341179389336fcac620c50d", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[dependencies.inject_self_macro]
version = "0.3.0"
path = "../../contracts/inject_self_macro"

[dependencies.named_functions_macro]
version = "0.3.0"
path = "../../contracts/named_functions_macro"

[dependencies.disable_macro]
version = "0.3.0"
path = "../../contracts/disable_macro"

[lib]
name = "proxy"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib"
]
# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
